--- a/views/fetchuserdetail.pug
+++ b/views/fetchuserdetail.pug
@@ -2,29 +2,22 @@ doctype
 html
     head
         title #{title}
+        link(href='/css/bootstrap.min.css' type='text/css' rel='stylesheet')
     body
         header
             h1 #{message}
         .container
             .main-content
-                form(method='post' action='/updatedata' id='adduser')
-                    table(cellspacing=10)
-                        input(type='hidden' name='id' value=userdetaillist._id)
-                        tr
-                            td
-                                label Firstname
-                            td
-                                input(type='text' name='fname' value=userdetaillist.fname)
-                        tr
-                            td
-                                label Lastname
-                            td
-                                input(type='text' name='lname' value=userdetaillist.lname)
-                        tr
-                            td
-                                label Age
-                            td
-                                input(type='number' name='age' value=userdetaillist.age)
-                        tr(style="text-align:center")
-                            td(colspan=2)
-                                input(type='submit' value='add')
+                form(method='post' action='/updatedata' id='adduser' class='form-group')
+                    input(type='hidden' name='id' value=userdetaillist._id)
+                    div(class='form-group')
+                        label Firstname
+                        input(type='text' name='fname' class='form-control' value=userdetaillist.fname)
+                    div(class='form-group')
+                        label Lastname
+                        input(type='text' name='lname' class='form-control' value=userdetaillist.lname)
+                    div(class='form-group')
+                        label Age
+                        input(type='number' name='age' class='form-control' value=userdetaillist.age)
+                    div(class='form-group')
+                        input(type='submit' class='btn btn-primary' value='Update')
