--- a/views/userlist.pug
+++ b/views/userlist.pug
@@ -1,20 +1,20 @@
 html
     head
         title #{title}
-
+        link(href='/css/bootstrap.min.css' type='text/css' rel='stylesheet')
         body
-            h1 #{tabletitle}
+            h1(class='text-center') #{tabletitle}
             .container
                 .main-content
                     .row(style="padding-bottom:20px")
-                        a(type="button" href="/useraddform") Insert
-                    table(border=1 style="text-align:center")
+                        a(type="button" class='btn btn-success' style='float:right; margin-right:20px' href="/useraddform") Insert
+                    table(class='table table-striped text-center')
                         thead
                             tr
-                                td SR.NO.
-                                td Firstname
-                                td Lastname
-                                td(colspan=2) Action
+                                th(class='text-center') Firstname
+                                th(class='text-center') Lastname
+                                th(class='text-center') Update
+                                th(class='text-center') Delete
                         tbody
                             each items in userdetaillist
                                 tr
@@ -24,3 +24,4 @@ html
                                         a(href='/fetchsingle/' + items._id) Update
                                     td
                                         a(href='/delete/' + items._id) Delete
+
