--- a/views/fetchuserdetail.pug
+++ b/views/fetchuserdetail.pug
@@ -17,7 +17,7 @@ html
                         label Lastname
                         input(type='text' name='lname' class='form-control' value=userdetaillist.lname)
                     div(class='form-group')
-                        label Age
+                        label Marks
                         input(type='number' name='age' class='form-control' value=userdetaillist.age)
                     div(class='form-group')
                         input(type='submit' class='btn btn-primary' value='Update')
